--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ input::placeholder {
 
 #again-search {
     align-self: center;
-    margin-left: 27rem;
+    margin-left: 30rem;
     margin-top: 2rem;
     color: #FFFFFF;
     border: none;
@@ -256,7 +256,7 @@ a{
     }
 }
 
-.again-sr {
+#again-sr {
     width: 100vw;
     display: flex;
     justify-content: center;
